logos-codegen/tests/snapshots/codegen__tuple_variant_failure1-pre_1_82.snap
---
source: logos-codegen/tests/codegen.rs
expression: generated
---
impl < 's > :: logos :: Logos < 's > for Token < 's > { type Error = () ; type Extras = () ; type Source = str ; fn lex (lex : & mut :: logos :: Lexer < 's , Self >) { fn _logos_derive_compile_errors () { { compile_error ! ("Logos currently only supports variants with one field, found 2") } } } }
